kubernetes/reference/wrench-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wrench-api-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wrench-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: wrench-api
      namespace: production
      labels:
        app: wrench-api
    spec:
      containers:
        - name: wrench-api-container
          image: bgt3/wrench-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
          startupProbe:
            httpGet:
              path: /health/ready
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            periodSeconds: 30
