kubernetes/reference/wrench-api-https-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wrench-http-route
  namespace: production
spec:
  parentRefs:
    - name: bgt3-gw
      namespace: gateway
      sectionName: https
  hostnames: ['api.bgt3.com.br']
  rules:
    - backendRefs:
        - name: wrench-api-svc
          port: 8080
